# ai-real-detector

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
ai_real_detector/: __init__.py  cli.py  metadata.py  model_loader.py  predictor.py
